fixed padding for userscreen on mobile

--- a/react-dashboard/src/App.scss
+++ b/react-dashboard/src/App.scss
@@ -32,7 +32,8 @@ body {
 
 @media screen and (min-width: $sm) {
   .data-wrapper {
-    width: 90%;
+    // width: 90%;
+    padding:0 8%;
   }
 }
 
@@ -40,6 +41,7 @@ body {
   .data-wrapper {
     margin: 0;
     width: 80%;
+    // padding:0 20%;
     position: inherit;
   }
 }
